--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "babel-node index.js",
     "dev": "nodemon --exec babel-node index.js",
     "transpile": "babel ./index.js"
   },
